7311: spotless
Signed-off-by: Matilda Clerke <matilda.clerke@consensys.net>