@@ -44,8 +44,7 @@ public class GetReceiptsFromPeerTaskTest {
 
   @Test
   public void testGetSubProtocol() {
-    GetReceiptsFromPeerTask task =
-        new GetReceiptsFromPeerTask(Collections.emptyList(), () -> null);
+    GetReceiptsFromPeerTask task = new GetReceiptsFromPeerTask(Collections.emptyList(), () -> null);
     Assertions.assertEquals(EthProtocol.get(), task.getSubProtocol());
   }
 
@@ -75,8 +74,7 @@ public class GetReceiptsFromPeerTaskTest {
 
   @Test
   public void testParseResponseWithNullResponseMessage() {
-    GetReceiptsFromPeerTask task =
-        new GetReceiptsFromPeerTask(Collections.emptyList(), () -> null);
+    GetReceiptsFromPeerTask task = new GetReceiptsFromPeerTask(Collections.emptyList(), () -> null);
     Assertions.assertThrows(
         InvalidPeerTaskResponseException.class, () -> task.processResponse(null));
   }
@@ -103,26 +101,28 @@ public class GetReceiptsFromPeerTaskTest {
   public void testParseResponse() throws InvalidPeerTaskResponseException {
     BlockHeader blockHeader1 = mockBlockHeader(1);
     TransactionReceipt receiptForBlock1 =
-            new TransactionReceipt(1, 123, Collections.emptyList(), Optional.empty());
-    Mockito.when(blockHeader1.getReceiptsRoot()).thenReturn(BodyValidation.receiptsRoot(List.of(receiptForBlock1)));
+        new TransactionReceipt(1, 123, Collections.emptyList(), Optional.empty());
+    Mockito.when(blockHeader1.getReceiptsRoot())
+        .thenReturn(BodyValidation.receiptsRoot(List.of(receiptForBlock1)));
 
     BlockHeader blockHeader2 = mockBlockHeader(2);
     TransactionReceipt receiptForBlock2 =
-            new TransactionReceipt(1, 456, Collections.emptyList(), Optional.empty());
-    Mockito.when(blockHeader2.getReceiptsRoot()).thenReturn(BodyValidation.receiptsRoot(List.of(receiptForBlock2)));
+        new TransactionReceipt(1, 456, Collections.emptyList(), Optional.empty());
+    Mockito.when(blockHeader2.getReceiptsRoot())
+        .thenReturn(BodyValidation.receiptsRoot(List.of(receiptForBlock2)));
 
     BlockHeader blockHeader3 = mockBlockHeader(3);
     TransactionReceipt receiptForBlock3 =
-            new TransactionReceipt(1, 789, Collections.emptyList(), Optional.empty());
-    Mockito.when(blockHeader3.getReceiptsRoot()).thenReturn(BodyValidation.receiptsRoot(List.of(receiptForBlock3)));
+        new TransactionReceipt(1, 789, Collections.emptyList(), Optional.empty());
+    Mockito.when(blockHeader3.getReceiptsRoot())
+        .thenReturn(BodyValidation.receiptsRoot(List.of(receiptForBlock3)));
 
     BlockHeader blockHeader4 = mockBlockHeader(4);
     Mockito.when(blockHeader4.getReceiptsRoot()).thenReturn(Hash.EMPTY_TRIE_HASH);
 
     GetReceiptsFromPeerTask task =
         new GetReceiptsFromPeerTask(
-            List.of(blockHeader1, blockHeader2, blockHeader3, blockHeader4),
-            () -> null);
+            List.of(blockHeader1, blockHeader2, blockHeader3, blockHeader4), () -> null);
 
     ReceiptsMessage receiptsMessage =
         ReceiptsMessage.create(
@@ -162,16 +162,14 @@ public class GetReceiptsFromPeerTaskTest {
 
   @Test
   public void testIsSuccessForPartialSuccess() {
-    GetReceiptsFromPeerTask task =
-        new GetReceiptsFromPeerTask(Collections.emptyList(), () -> null);
+    GetReceiptsFromPeerTask task = new GetReceiptsFromPeerTask(Collections.emptyList(), () -> null);
 
     Assertions.assertFalse(task.isSuccess(Collections.emptyMap()));
   }
 
   @Test
   public void testIsSuccessForFullSuccess() {
-    GetReceiptsFromPeerTask task =
-        new GetReceiptsFromPeerTask(Collections.emptyList(), () -> null);
+    GetReceiptsFromPeerTask task = new GetReceiptsFromPeerTask(Collections.emptyList(), () -> null);
 
     Map<BlockHeader, List<TransactionReceipt>> map = new HashMap<>();
     map.put(mockBlockHeader(1), null);
